--- a/ADMN5016_Omar_MejiaReyes_ML_FP.html
+++ b/ADMN5016_Omar_MejiaReyes_ML_FP.html
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h4 id="Business-Analytics,-St-Lawrence-College-(Kingston)">Business Analytics, St Lawrence College (Kingston)<a class="anchor-link" href="#Business-Analytics,-St-Lawrence-College-(Kingston)">&#182;</a></h4><h4 id="ADMN5006---Financial-Analytics-Assignment">ADMN5006 - Financial Analytics Assignment<a class="anchor-link" href="#ADMN5006---Financial-Analytics-Assignment">&#182;</a></h4><h4 id="ML-Assignment-1---Bankruptcy-practice">ML Assignment 1 - Bankruptcy practice<a class="anchor-link" href="#ML-Assignment-1---Bankruptcy-practice">&#182;</a></h4><h4 id="Student:-Omar-Mej%C3%ADa-Reyes">Student: Omar Mej&#237;a-Reyes<a class="anchor-link" href="#Student:-Omar-Mej%C3%ADa-Reyes">&#182;</a></h4><p><br>
+<h4 id="Business-Analytics,-St-Lawrence-College-(Kingston)">Business Analytics, St Lawrence College (Kingston)<a class="anchor-link" href="#Business-Analytics,-St-Lawrence-College-(Kingston)">&#182;</a></h4><h4 id="ADMN5016-:-Applied-Artificial-Intelligence-and-Machine-Learning">ADMN5016 : Applied Artificial Intelligence and Machine Learning<a class="anchor-link" href="#ADMN5016-:-Applied-Artificial-Intelligence-and-Machine-Learning">&#182;</a></h4><h4 id="Final-Project">Final Project<a class="anchor-link" href="#Final-Project">&#182;</a></h4><h4 id="Student:-Omar-Mej%C3%ADa-Reyes">Student: Omar Mej&#237;a-Reyes<a class="anchor-link" href="#Student:-Omar-Mej%C3%ADa-Reyes">&#182;</a></h4><p><br>
 <br></p>
 
 </div>
